8.0:
	add flush function into callback interface
		for supporting inter/OPENCC* ( http://github.com/buganini/bsdconv-opencc )
	sync data from project chvar
	update inter/KANA_PHONETIC
	use double data type for score value

7.5:
	add {from,to}/CP1253
	fix several linux issues
	bugfixes

7.4:
	adaptive verbosity

7.3:
	bsdconv: add -q for quiet mode
	sync tables from project chvar
	bugfixes

7.2:
	add {from,to}/_JIS0212 and it's alias
	update inter/ZHTW, inter/ZHCN, to/CP950_TRANS, to/CP936_TRANS
	add inter/ZH_FUZZY_TW, INTER/ZH_FUZZY_CN
	various bugfixes

7.1:
	add {from,to}/LOCALE alias to system locale
	rename inter/JP_PINYIN to inter/KANA_PHONETIC
	add transposed to/_CP12151, to/_CP1252, to/_CP874, to/_CP949, to/_SHIFT-JIS
	add {from,to}/GB18030
	add inter/NOBOM

7.0:
	add inter/SPLIT
	add from/_CP874
	alter bsdconv_codecs_list()

6.4:
	bugfixes

6.3:
	improve alias mechanism
	add bsdconv_codec_check()
	add bsdconv_codecs_list()
	add bsdconv_pack()

6.2:
	improve inter/{zh_decomp,zh_comp}

6.1:
	mac os compatible
	improve inter/ZHTW_WORDS
	improve inter/ZH_DECOMP and inter/ZH_COMP

6.0:
	improve cross-codecs communication
	inter/WHITESPACE-DERAIL
	inter/WHITESPACE-RERAIL

5.1:
	reduce memory usage in bsdconv_mktable
	inter/WIDTH
	to/NULL

5.0:
	table format change
	inter/SCORE
	inter/SCORE_TRAIN
	refactor bsdconv_create()
	add bsdconv_insert_phase()
	add bsdconv_insert_codec()
	add bsdconv_replace_phase()
	add bsdconv_replace_codec()
	add bsdconv_get_phase_index()
	add bsdconv_get_codec_index()
	add bsdconv_duplicate()
	add bsdconv_ctl() and cbctl() in callback mechanism

4.8:
	improve inter/{half,full}

4.7:
	from/UAO250
	to/UAO250
	split wrappers and bsdconvmv
	from/NUL
	to/NUL
	inter/AMBIGUOUS-UNPAD
	inter/BSDCONV_INFO

4.6:
	from/MOZ18 -> from/UAO241
	to/UAO241

4.5:
	from/ANSI-CONTROL
	from/BSDCONV_LOG
	from/SKIP
	inter/AMBIGUOUS-PAD
	inter/BIG5-DEFRAG
	to/ANSI-CONTROL
	to/ASCII-HTML-INFO
	to/BSDCONV_LOG
	to/BSDCONV_RAW
	verify SUBROUTINE in inter phases
