@@ -1,6 +1,6 @@
 PREFIX?=/usr/local
 BSDCONV_PATH?=${PREFIX}
-CFLAGS+=-Wall -DPREFIX='"${PREFIX}"' -DBSDCONV_PATH='"${BSDCONV_PATH}"'
+CFLAGS+=-g -Wall -DPREFIX='"${PREFIX}"' -DBSDCONV_PATH='"${BSDCONV_PATH}"'
 SHLIBVER=8
 
 UNAME_S=$(shell uname -s)
@@ -62,6 +62,7 @@ TODO_CODECS_BASIC_TABLE+=inter/SCORE
 TODO_CODECS_BASIC_TABLE+=inter/SCORE_TRAIN
 TODO_CODECS_BASIC_TABLE+=inter/SPLIT
 TODO_CODECS_BASIC_TABLE+=inter/TO_ALIAS
+TODO_CODECS_BASIC_TABLE+=inter/TRIM-WIDTH
 TODO_CODECS_BASIC_TABLE+=inter/UNIX
 TODO_CODECS_BASIC_TABLE+=inter/UPPER
 TODO_CODECS_BASIC_TABLE+=inter/UPSIDEDOWN
@@ -157,6 +158,7 @@ TODO_CODECS_BASIC_CALLBACK+=inter/SCORE
 TODO_CODECS_BASIC_CALLBACK+=inter/SCORE_TRAIN
 TODO_CODECS_BASIC_CALLBACK+=inter/SPLIT
 TODO_CODECS_BASIC_CALLBACK+=inter/TO_ALIAS
+TODO_CODECS_BASIC_CALLBACK+=inter/TRIM-WIDTH
 TODO_CODECS_BASIC_CALLBACK+=inter/WHITESPACE-DERAIL
 TODO_CODECS_BASIC_CALLBACK+=inter/WHITESPACE-RERAIL
 TODO_CODECS_BASIC_CALLBACK+=inter/WIDTH
